// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delivery component renders a return tab where returns status can be checked 1`] = `
<DocumentFragment>
  .c7 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c8 {
  border: 1px solid grey;
  border-radius: var(--border-radius-lg);
  margin-right: 8px;
  max-width: 175px;
  padding: 8px 0 8px 10px;
  width: 40%;
}

.c1 {
  color: var(--color-grey-4);
  font-size: var(--font-size-14);
  text-transform: uppercase;
}

.c2 {
  color: var(--color-grey-4);
  font-size: var(--font-size-13);
  margin: 8px 0 8px 20px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  background-color: var(--color-grey-11);
  border-bottom: 3px solid var(--color-orange-1);
  cursor: pointer;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: var(--font-weight-semibold);
  padding: 8px;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.c4 {
  background-color: var(--color-grey-12);
  border-bottom: 3px solid var(--color-grey-12);
  cursor: pointer;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: var(--font-weight-semibold);
  padding: 8px;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--color-grey-11);
  border-bottom: 1px solid var(--color-grey-9);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 20px 15px;
}

.c9 {
  --size: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--color-grey-3);
  border-radius: var(--border-radius-full);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: var(--size);
}

.c9:active {
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
}

@media screen and (min-width:650px) {

}

@media screen and (min-width:650px) {
  .c0 {
    margin-bottom: 30px;
    margin-right: 30px;
  }
}

@media screen and (min-width:860px) {
  .c0 {
    margin-right: 50px;
  }
}

@media screen and (min-width:1050px) {
  .c0 {
    margin: 0;
  }
}

@media screen and (min-width:650px) {
  .c2 {
    margin: 8px 0;
  }
}

@media screen and (max-width:649px) {
  .c6 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<div
    class="c0"
  >
    <strong
      class="c1"
    >
      Delivery / Tracking Information
    </strong>
    <div
      id="delivery"
      style="overflow: hidden; height: auto;"
    >
      <p
        class="c2"
      >
        Order now to receive by tomorrow.
      </p>
      <div
        class="c3"
      >
        <button
          class="c4"
          type="button"
        >
          Order
        </button>
        <button
          class="c5"
          type="button"
        >
          Return
        </button>
        <button
          class="c4"
          type="button"
        >
          System
        </button>
      </div>
      <form
        action="https://pc-connect.co.uk/tracking/trackreturn"
        class="c6"
        method="post"
      >
        <label
          class="c7"
          for=":r8:"
        >
          Invoice Number:
        </label>
        <input
          aria-required="true"
          autocapitalize="off"
          autocomplete="off"
          class="c8"
          id=":r8:"
          maxlength="10"
          name="invoiceNumber"
          placeholder="Invoice No."
          required=""
          spellcheck="false"
          type="text"
          value=""
        />
        <label
          class="c7"
          for=":r9:"
        >
          RMA Number:
        </label>
        <input
          aria-required="true"
          autocapitalize="off"
          autocomplete="off"
          class="c8"
          id=":r9:"
          maxlength="10"
          name="rmaNumber"
          placeholder="RMA No."
          required=""
          spellcheck="false"
          type="text"
          value=""
        />
        <button
          aria-label="Submit"
          class="c9"
          title="Submit"
          type="submit"
        >
          <svg
            fill="white"
            height="19"
            viewBox="0 0 384 512"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M342.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L274.7 256 105.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
            />
          </svg>
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Delivery component renders a system build tab where build progress can be checked 1`] = `
<DocumentFragment>
  .c7 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c8 {
  border: 1px solid grey;
  border-radius: var(--border-radius-lg);
  margin-right: 8px;
  max-width: 175px;
  padding: 8px 0 8px 10px;
  width: 40%;
}

.c1 {
  color: var(--color-grey-4);
  font-size: var(--font-size-14);
  text-transform: uppercase;
}

.c2 {
  color: var(--color-grey-4);
  font-size: var(--font-size-13);
  margin: 8px 0 8px 20px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  background-color: var(--color-grey-11);
  border-bottom: 3px solid var(--color-orange-1);
  cursor: pointer;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: var(--font-weight-semibold);
  padding: 8px;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.c4 {
  background-color: var(--color-grey-12);
  border-bottom: 3px solid var(--color-grey-12);
  cursor: pointer;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: var(--font-weight-semibold);
  padding: 8px;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--color-grey-11);
  border-bottom: 1px solid var(--color-grey-9);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 20px 15px;
}

.c9 {
  --size: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--color-grey-3);
  border-radius: var(--border-radius-full);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: var(--size);
}

.c9:active {
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
}

@media screen and (min-width:650px) {

}

@media screen and (min-width:650px) {
  .c0 {
    margin-bottom: 30px;
    margin-right: 30px;
  }
}

@media screen and (min-width:860px) {
  .c0 {
    margin-right: 50px;
  }
}

@media screen and (min-width:1050px) {
  .c0 {
    margin: 0;
  }
}

@media screen and (min-width:650px) {
  .c2 {
    margin: 8px 0;
  }
}

@media screen and (max-width:649px) {
  .c6 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<div
    class="c0"
  >
    <strong
      class="c1"
    >
      Delivery / Tracking Information
    </strong>
    <div
      id="delivery"
      style="overflow: hidden; height: auto;"
    >
      <p
        class="c2"
      >
        Order now to receive by tomorrow.
      </p>
      <div
        class="c3"
      >
        <button
          class="c4"
          type="button"
        >
          Order
        </button>
        <button
          class="c4"
          type="button"
        >
          Return
        </button>
        <button
          class="c5"
          type="button"
        >
          System
        </button>
      </div>
      <form
        action="https://pc-connect.co.uk/tracking/trackbuild"
        class="c6"
        method="post"
      >
        <label
          class="c7"
          for=":re:"
        >
          Invoice Number:
        </label>
        <input
          aria-required="true"
          autocapitalize="off"
          autocomplete="off"
          class="c8"
          id=":re:"
          maxlength="10"
          name="invoiceNumber"
          placeholder="Invoice No."
          required=""
          spellcheck="false"
          type="text"
          value=""
        />
        <label
          class="c7"
          for=":rf:"
        >
          Build Number:
        </label>
        <input
          aria-required="true"
          autocapitalize="off"
          autocomplete="off"
          class="c8"
          id=":rf:"
          maxlength="10"
          name="buildNumber"
          placeholder="Build No."
          required=""
          spellcheck="false"
          type="text"
          value=""
        />
        <button
          aria-label="Submit"
          class="c9"
          title="Submit"
          type="submit"
        >
          <svg
            fill="white"
            height="19"
            viewBox="0 0 384 512"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M342.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L274.7 256 105.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
            />
          </svg>
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Delivery component renders an order tab where order tracking can be checked 1`] = `
<DocumentFragment>
  .c7 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c8 {
  border: 1px solid grey;
  border-radius: var(--border-radius-lg);
  margin-right: 8px;
  max-width: 175px;
  padding: 8px 0 8px 10px;
  width: 40%;
}

.c1 {
  color: var(--color-grey-4);
  font-size: var(--font-size-14);
  text-transform: uppercase;
}

.c2 {
  color: var(--color-grey-4);
  font-size: var(--font-size-13);
  margin: 8px 0 8px 20px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  background-color: var(--color-grey-11);
  border-bottom: 3px solid var(--color-orange-1);
  cursor: pointer;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: var(--font-weight-semibold);
  padding: 8px;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.c5 {
  background-color: var(--color-grey-12);
  border-bottom: 3px solid var(--color-grey-12);
  cursor: pointer;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: var(--font-weight-semibold);
  padding: 8px;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--color-grey-11);
  border-bottom: 1px solid var(--color-grey-9);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 20px 15px;
}

.c9 {
  --size: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--color-grey-3);
  border-radius: var(--border-radius-full);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: var(--size);
}

.c9:active {
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
}

@media screen and (min-width:650px) {

}

@media screen and (min-width:650px) {
  .c0 {
    margin-bottom: 30px;
    margin-right: 30px;
  }
}

@media screen and (min-width:860px) {
  .c0 {
    margin-right: 50px;
  }
}

@media screen and (min-width:1050px) {
  .c0 {
    margin: 0;
  }
}

@media screen and (min-width:650px) {
  .c2 {
    margin: 8px 0;
  }
}

@media screen and (max-width:649px) {
  .c6 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<div
    class="c0"
  >
    <strong
      class="c1"
    >
      Delivery / Tracking Information
    </strong>
    <div
      id="delivery"
      style="overflow: hidden; height: auto;"
    >
      <p
        class="c2"
      >
        Order now to receive by tomorrow.
      </p>
      <div
        class="c3"
      >
        <button
          class="c4"
          type="button"
        >
          Order
        </button>
        <button
          class="c5"
          type="button"
        >
          Return
        </button>
        <button
          class="c5"
          type="button"
        >
          System
        </button>
      </div>
      <form
        action="https://pc-connect.co.uk/tracking/trackorder"
        class="c6"
        method="post"
      >
        <label
          class="c7"
          for=":r2:"
        >
          Invoice Number:
        </label>
        <input
          aria-required="true"
          autocapitalize="off"
          autocomplete="off"
          class="c8"
          id=":r2:"
          maxlength="10"
          name="invoiceNumber"
          placeholder="Invoice No."
          required=""
          spellcheck="false"
          type="text"
          value=""
        />
        <label
          class="c7"
          for=":r3:"
        >
          Postcode:
        </label>
        <input
          aria-required="true"
          autocapitalize="off"
          autocomplete="off"
          class="c8"
          id=":r3:"
          maxlength="10"
          name="postcode"
          placeholder="Postcode"
          required=""
          spellcheck="false"
          type="text"
          value=""
        />
        <button
          aria-label="Submit"
          class="c9"
          title="Submit"
          type="submit"
        >
          <svg
            fill="white"
            height="19"
            viewBox="0 0 384 512"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M342.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L274.7 256 105.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
            />
          </svg>
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
